2007-11-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* GHost items when renaming a local folder, fixed
	* Date-Received date = Date header for messages that never got
	received (like newly created messages in a Draft folder)

2007-10-31  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Ignore priority flags in tny_camel_msg_header_unset_flag()
	* Remove the X-Priority header in set_prio_mask() instead of
	tny_camel_msg_header_set_flag()

2007-10-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* \NoSelect folders should never get a STATUS request, fixed
	* Documentation clarification about priority and flags
	* Renamed tny_header_set_flags to set_flag, same for unset
	* Lowered the number of TOPs before incrementally filling up of the
	headers model happens for POP

	* This was a major API change

2007-10-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements to the AUTHORS file. Authors can obviously notify
	me if they want their description improven or removed.
	* Using the SSL negotiated timeout time for IDLE's recycle (undone)
	* Undone last timeout change, set it to 27 minutes fixed for IMAP
	
2007-10-29  Jose Dapena Paz  <jdapena@igalia.com>

	* Fix: now we don't unset the priority flag on setting or
	  unsetting other flags.

2007-10-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of tny_gtk_msg_window_set_view

	* This was a minor API change

2007-10-26  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Parse the X-Priority flag correctly, and allow values of 2 and 4

2007-10-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* X-Priority flag writing fixed

2007-10-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Corrections for the priority flags
	* Memory leak fix in CamelImapCommand, found by Dirk-Jan
	* Freeing of recursive locks, especially the ones that we allocated
	ourselves

	* This was a major API change

2007-10-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements for the IDLE support. The Nonblocking read is now